--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -36,4 +36,4 @@ jobs:
         access-key-id: ${{ secrets.OSS_KEY_ID }}
         access-key-secret: ${{ secrets.OSS_KEY_SECRET }}
     - name: cp files to aliyun
-      run: ossutil cp -rf .vuepress/dist oss://xstvlive/
+      run: ossutil cp -rf .FlaseSb/xs oss://xstvlive/
