--- a/.github/workflows/x.yml
+++ b/.github/workflows/x.yml
@@ -1,39 +1,41 @@
 name: deploy to aliyun oss
 
-on: [push]
+on:
+  push:
+    barches:
+      - master
+  schedule:
+  - cron:  '*/15 * * * *'
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+    env:
+      CI: true
+      ACCESS_KEY: ${{ secrets.OSS_KEY_ID }}
+      ACCESS_SECRET: ${{ secrets.OSS_KEY_SECRET }}
 
     steps:
     # 切代码到 runner
     - uses: actions/checkout@v1
       with:
         submodules: true
-    # 下载 git submodule
-    - uses: srt32/git-actions@v0.0.3
-      with:
-        args: git submodule update --init --recursive
     # 使用 node:10
     - name: use Node.js 10.x
       uses: actions/setup-node@v1
       with:
         node-version: 10.x
-    # npm install
-    - name: npm install and build
-      run: |
-        npm install
-        npm run build
-      env:
-        CI: true
-    # 设置阿里云OSS的 id/secret，存储到 github 的 secrets 中
-    - name: setup aliyun oss
-      uses: manyuanrong/setup-ossutil@master
-      with:
-        endpoint: oss-cn-hangzhou.aliyuncs.com
-        access-key-id: ${{ secrets.OSS_KEY_ID }}
-        access-key-secret: ${{ secrets.OSS_KEY_SECRET }}
-    - name: cp files to aliyun
-      run: ossutil cp -rf static oss://xstvlive/
+    - name: npm install
+      run: npm ci
+    - name: build data
+      run: node scripts/build-origin.js
+    - name: npm run build
+      run: npm run build
+    #- name: cp static files to aliyun
+
+    - name: cp static files to aliyun
+      run: ossutil cp -r build/static/ oss://xstvlive/ --update
+      run: node scripts/upload-oss.js
+
+      # - name: cp all files to aliyun
+      #   run: ossutil cp -r build/ oss://shanyue-ncov/ --update --only-current-dir --exclude precache*
