--- a/.github/workflows/x.yml
+++ b/.github/workflows/x.yml
@@ -31,5 +31,20 @@ jobs:
       run: node scripts/build-origin.js
     - name: npm run build
       run: npm run build
-    - name: cp all files to aliyun
-      run: ossutil cp -rf build/ oss://xstvlive/
+    - name: cp static files to aliyun
+      run: node scripts/upload-oss.js
+
+      # 设置阿里云OSS的 id/secret，存储到 github 的 secrets 中
+      - name: setup aliyun oss
+         uses: manyuanrong/setup-ossutil@v1.0
+         with:
+           endpoint: oss-cn-hangzhou.aliyuncs.com
+           access-key-id: ${{ secrets.OSS_KEY_ID }}
+          access-key-secret: ${{ secrets.OSS_KEY_SECRET }}
+       - name: 删除冗余文件
+         run: ossutil rm oss://xstvlive/static -rf
+         if: github.event_name == 'schedule'
+       - name: update ossutil
+         run: ossutil update -f
+       - name: cp static files to aliyun
+        run: ossutil cp -r build/static/ oss://xstvlive/static/ --update
