--- a/.github/workflows/x.yml
+++ b/.github/workflows/x.yml
@@ -40,4 +40,4 @@ jobs:
     - name: cp files to aliyun
       run: ossutil cp -r build/static/ oss://xstvlive/static/ --update
     - name: cp all files to aliyun
-      run: ossutil cp -r build/ oss://xstvlive/ --update --only-current-dir --exclude precache*
+      run: ossutil cp -r build/ oss://xstvlive/ --update
