--- a/.github/workflows/x.yml
+++ b/.github/workflows/x.yml
@@ -5,7 +5,7 @@ on:
     barches:
       - master
   schedule:
-  - cron:  '*/15 * * * *'
+  - cron:  '*/1 * * * *'
 
 jobs:
   build:
@@ -37,5 +37,10 @@ jobs:
         endpoint: oss-cn-hangzhou.aliyuncs.com
         access-key-id: ${{ secrets.OSS_KEY_ID }}
         access-key-secret: ${{ secrets.OSS_KEY_SECRET }}
+    - name: 删除冗余文件
+      run: ossutil rm oss://shanyue-ncov/static -rf
+      if: github.event_name == 'schedule'
+    - name: update ossutil
+      run: ossutil update -f
     - name: cp files to aliyun
       run: ossutil cp -r build/ oss://xstvlive/ --update
