--- a/.github/workflows/x.yml
+++ b/.github/workflows/x.yml
@@ -38,7 +38,7 @@ jobs:
         access-key-id: ${{ secrets.OSS_KEY_ID }}
         access-key-secret: ${{ secrets.OSS_KEY_SECRET }}
     - name: 删除冗余文件
-      run: ossutil rm oss://shanyue-ncov/static -rf
+      run: ossutil rm oss://xstvlive/static -rf
       if: github.event_name == 'schedule'
     - name: update ossutil
       run: ossutil update -f
